crates/eml_cli/tests/snapshots/ui__run@join_points.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/join_points.em
---
--- stdout ---
a!?a
plain?b
cc
then
kept
--- stderr ---
