crates/eml_cli/tests/snapshots/ui__run@jumpless_join_after_call.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/jumpless_join_after_call.em
---
--- stdout ---
a
x
end
--- stderr ---
