crates/eml_cli/tests/snapshots/ui__run@multi_loop.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/multi_loop.em
---
--- stdout ---
50005000
--- stderr ---
