crates/eml_cli/tests/snapshots/ui__run@operation_values.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/operation_values.em
---
--- stdout ---
note: first
note: second
info: first
info: second
--- stderr ---
