crates/eml_cli/tests/snapshots/ui__run@partial_application.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/partial_application.em
---
--- stdout ---
hi, alice
hi, bob
hello, carol
7
15
--- stderr ---
