crates/eml_cli/tests/snapshots/ui__run@pipe_evaluation_order.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/pipe_evaluation_order.em
---
--- stdout ---
left
right
2
--- stderr ---
